src/components/Projects/style.module.scss
@import '/breakpoints';

.projects{
    position: relative;
    display: flex;
    align-items: center;
    padding-left: 200px;
    padding-right: 200px;
    flex-direction: column;
    margin-top: 300px;

    background-color: black;
    z-index: 10;
    @include sm {
        padding-left: 0px;
        padding-right: 0px;
    }
    @include md {
        padding-left: 0px;
        padding-right: 0px;
        // padding-top: 5%;
    margin-top: 100px;


    }
  
    .link {
        text-decoration: none;
        color: white;
    }
    .body{
        max-width: 1400px;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin-bottom: 100px;
        @include sm {
            max-width: 627px;
        }
        @include md {
            max-width: 627px;
        }
       
    }
    
    .modalContainer{
        height: 350px;
        width: 400px;
        position: fixed;
        top: 50%;
        left: 50%;
        background-color: white;
        pointer-events: none;
        overflow: hidden;
        z-index: 3;
        // @include sm {
        //     width: 100%;
        // }
    }
    
    .modalSlider{
        height: 100%;
        width: 100%;
        position: relative;
        transition: top 0.5s cubic-bezier(0.76, 0, 0.24, 1);
    }
    
    .modal{
        height: 100%;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    
    .modal img{
        height: auto;
    }
    
    .cursor, .cursorLabel{
        width: 80px;
        height: 80px;
        border-radius: 50%;
        background-color: #F8E6CB;
        color: rgb(23, 23, 23);
        position: fixed;
        z-index:3;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 14px;
        font-weight: 300;
        pointer-events: none;
    }
    
    .cursorLabel{
        background-color: transparent;
    }
    
    
}

